# claim-contract

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LIMITATIONS.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CONTRACT_SEMANTICS.md  MACHINE_READABLE.md  RULES.md
examples/: README.md
examples/adversarial/: README.md
examples/adversarial/agent_misuse/: README.md  contract.yaml  safe_summary.md  unsafe_summary.md
examples/adversarial/false_confidence_ready/: README.md  contract.yaml
examples/adversarial/undeclared_assumptions/: README.md  contract.yaml
examples/descriptive_summary/: contract.yaml
examples/missing_uncertainty/: README.md  contract.yaml
examples/onboarding_conversion/: README.md  contract.yaml
schemas/: error-v1.schema.json  report-v1.schema.json
src/claim_contract/: __init__.py  cli.py  formatters.py  io.py  metadata.py  models.py  validator.py
tests/: test_adversarial_examples.py  test_cli.py  test_examples.py  test_machine_readable.py  test_validator.py
