[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claim-contract"
version = "0.1.0"
description = "A deterministic harness for declared minimum contracts on analytical claims."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Thomas Musser" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://github.com/tmusser/claim-contract"
Repository = "https://github.com/tmusser/claim-contract"
Issues = "https://github.com/tmusser/claim-contract/issues"

[project.optional-dependencies]
dev = [
  "jsonschema>=4.23.0",
  "pytest>=8.0.0",
]

[project.scripts]
claim-contract = "claim_contract.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
